-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.3, 5.12.1
-
Windows 10 with desktop OpenGL (Renderer: GeForce GTX 1050/PCIe/SSE2
Version: 4.6.0 NVIDIA 419.17)
-
-
a1c37462eebddf4ad7bc3192f1f3e9a3f7292b19 (qt/qtbase/5.12)
If an application contains QOpenGLWidget then there is flicker before rendering content. For example, when opening a combo box or showing a tooltip the popup first flickers black and then shows the content.
This was tested on Windows 10 with desktop OpenGL. The problem is not reproducible with Qt Quick applications nor with basic widget applications. I didn't test all possible Qt versions, but the problem appeared sometime between 5.11.0 and 5.11.2.
The problem can be reproduced with Qt's OpenGL Widget example. The flicker might be seen already when opening the main window, but it is clearer when hovering on top of 'Update Interval' field and the tooltip is shown.
- relates to
-
QTBUG-74062 QCombobox drop-down list jumping on open
-
- Closed
-
-
QTBUG-75455 Applying opacity by Stylesheet makes tooltips humogous
-
- Closed
-
- resulted from
-
QTBUG-67777 [Mixed monitor resolutions] QQuickWidget dialog window will cut off content when shown on mixed resolution/dpi monitors.
-
- Closed
-
For Gerrit Dashboard: QTBUG-74176 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
255535,5 | Windows: Fix tooltip flicker on GL surfaces | 5.12 | qt/qtbase | Status: MERGED | -2 | 0 |
256684,5 | QOffscreenSurface: Suppress setting of a default geometry on the window | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |
256762,2 | Add explanatory comment to QWindowPrivate::resizeAutomatic | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |